- The `floating' command tool now correctly follows movements of the 
  main window under KDE and other window managers.
- The register window is updated when the current frame changes.
- Value tips of strings containing ` = ' are displayed correctly.
- In file names, `//' is no longer normalized to `/'.  This is useful 
  for special file systems, where '//c/foo' is an alias for `c:\foo`.
- [DBX] The array syntax `graph display [A..B]' works again for DBX.
- [DBX] Redirection to the execution window with Sun DBX 4.0 no 
  longer clutters program arguments.
- [JDB] Thread names with dashes are handled correctly.
- [HP-UX] Renaming the `~/.ddd/init' file during saving options works.
- [Build] If supported, `-isystem' is used for including system headers.
- [Build] If supported and required, `-fpermissive' is used for old X headers.

There are no new features in DDD 3.1.7.  You don't need to upgrade
unless you suffer from one of these problems.

DDD 3.1.6
=========

DDD 3.1.6 brings support for recent tools and components.

- DDD passes all options after `--' to the inferior debugger.
- [Build] DDD supports EGCS 1.1.2 as well as GCC 2.95 and later
- [Build] DDD supports LessTif 0.88.9 and later.

There are no new features in DDD 3.1.6.  You don't need to upgrade
unless you suffer from one of these problems.


DDD 3.1.5
=========

DDD 3.1.5 brings support for recent tools and components.

- [Linux] DDD supports TTYs on Linux with GNU libc 2.1.
- [Solaris] DDD supports Motif 2.1 on Sun Solaris 7.
- [XEmacs] DDD supports gud-mode in XEmacs 21.0.
- [Build] DDD supports Bison 1.27 and Automake 1.4a.

There are no new features in DDD 3.1.5.  You don't need to upgrade
unless you use one of the listed tools and/or components.


DDD 3.1.4
=========

DDD 3.1.4 brings improved LessTif support and fixes more minor
problems in DDD 3.1.

- Changing the GDB display radix automatically refreshes displayed values.
- Searching Java classes visits each file exactly once.